--- a/src/app/components/universal/header/header.component.css
+++ b/src/app/components/universal/header/header.component.css
@@ -24,7 +24,7 @@ img {
     /* margin-top: 15px; */
     font-size: 20px;
     color: #FFFFFF;
-
+    cursor: pointer;
     display: flex;
     align-items: center;
     padding-top: 3rem;
