--- a/src/app/components/universal/header/header.component.html
+++ b/src/app/components/universal/header/header.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg navBG">
         <div class="col-3 end">
-            <div class="row">
+            <div class="row" routerLink='/home'>
                 <div class="col-lg-3">
-                    <img src="assets/codestacklogo.png" alt="The Codestack Academy logo" routerLink='/home'>
+                    <img src="assets/codestacklogo.png" alt="The Codestack Academy logo">
                 </div>
-                <div class="col-lg-6 d-flex align-center">
+                <div class="col-lg-6">
                     <p class="seasonThree">Season 3</p>
                 </div>
             </div>
