--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -49,7 +49,10 @@ img {
     background-color: #B6E2A2BF;
     cursor: pointer;
 }
-
+.cardOneBottom:hover {
+    background-color: #b6e2a2;
+    cursor: pointer;
+}
 .cardSize {
     height: 300px;
 }
@@ -65,6 +68,10 @@ img {
     background-color: #4394b1b6;
     cursor: pointer;
 }
+.cardTwoBottom:hover {
+    background-color: #4394b1;
+    cursor: pointer;
+}
 
 .cardThreeTop {
     background-color: #B73EB7;
@@ -75,6 +82,10 @@ img {
 
 .cardThreeBottom {
     background-color: #E094E5C4;
+    cursor: pointer;
+}
+.cardThreeBottom:hover{
+    background-color: #e094e5;
     cursor: pointer;
 }
 #background {
@@ -100,7 +111,6 @@ img {
 }
 .zoom {
     transition: transform .2s; /* Animation */
-   
 }
 .zoom:hover {
     transform: scale(1.08); /* (110% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
