--- a/src/app/pages/schedules/schedules.component.html
+++ b/src/app/pages/schedules/schedules.component.html
@@ -3,36 +3,46 @@
     <div class="row">
         <div class="col-8 ms-5">
             <h3 class="mt-5 mb-4 ">Schedules By Station Results</h3>
-            <div class="row">
-                <div class="col-2 headerTitle">
-                    <div class="container">
-                        <select class=" rounded-0 custom-select optionStyle py-2" id="inputGroupSelect01">
-                            <option class="" *ngFor="let item of popArray">{{item}}</option>
-                        </select>
+
+
+            <form>
+                <div class="row">
+                    <div class="col-2 headerTitle">
+                        <div class="container">
+                            <select class=" rounded-0 custom-select optionStyle py-2" #stationSelector >
+                                <option class="" *ngFor="let item of popArray">{{item}}</option>
+                            </select>
+                            <!-- onchange, target specific function that sets the variable and then use the button to create the URL and then sends it to service -->
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="mb-3">
+                            <!-- <label for="exampleInputEmail1" class="form-label sr-only">Date</label> -->
+                            <input type="date" class="form-control"  aria-describedby="timePicker" #timeSelector>
+                            <div id="emailHelp" class="form-text"></div>
+                        </div>
+                    </div>
+                    <div class="col-2 headerTitle">
+                        <div class="container">
+                            <select class=" rounded-0 custom-select optionStyle py-2" #dateSelector>
+                                <option class="" *ngFor="let item of timeArray">{{item}}</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <!-- <app-button (click)="toggle = !toggle" buttonText="Get Schedule"></app-button> -->
+                        <!-- <button (click)="logMe(dateSelector.value)">dsfgs</button>
+                         -->
+                        <button type="button" class="btn btn-primary" (click)="logMe(stationSelector.value, timeSelector.value, dateSelector.value)">Primary</button>
                     </div>
                 </div>
-                <div class="col-2">
-                    <div class="mb-3">
-                        <!-- <label for="exampleInputEmail1" class="form-label sr-only">Date</label> -->
-                        <input type="date" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        <div id="emailHelp" class="form-text"></div>
-                    </div>
-                </div>
-                <div class="col-2 headerTitle">
-                    <div class="container">
-                        <select class=" rounded-0 custom-select optionStyle py-2" id="inputGroupSelect01">
-                            <option class="" *ngFor="let item of timeArray">{{item}}</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <app-button (click)="toggle = !toggle" buttonText="Get Schedule"></app-button>
-                </div>
-            </div>
-        
+            </form>
+
+
+
             <h4 *ngIf="toggle" class="blueText mt-4">Station Schedule Results for [[station name]]</h4>
-        
-        
+
+
             <div class="row mt-4" *ngIf="toggle">
                 <div class="col">
                     <strong>[[Northbound Platform]]</strong>
@@ -81,5 +91,3 @@
         </div>
     </div>
 </div>
-
-
